--- a/man/metalog.8.in
+++ b/man/metalog.8.in
@@ -1,19 +1,19 @@
-.TH "metalog" "8" "@VERSION@" "Frank DENIS" "Syslog daemon"
+.TH "novalog" "8" "@VERSION@" "Frank DENIS" "Syslog daemon"
 .SH "NAME"
 .LP
-metalog \- an alternative syslog daemon
+novalog \- an alternative syslog daemon
 .SH "SYNTAX"
 .LP
-metalog [\fIoptions\fR]
+novalog [\fIoptions\fR]
 .SH "DESCRIPTION"
 .LP
-Metalog is a modern replacement for syslogd and klogd. The logged messages
+Novalog is a modern replacement for syslogd and klogd. The logged messages
 can be dispatched according to their facility, urgency, program name and/or
 Perl\-compatible regular expressions. Log files can be automatically rotated
 when they exceed a certain size or age. External shell scripts (ex: mail)
 can be launched when specific patterns are found.
 
-Metalog is easier to configure than syslogd and syslog\-ng, accepts unlimited
+Novalog is easier to configure than syslogd and syslog\-ng, accepts unlimited
 number of rules and has (switchable) memory bufferisation for maximal
 performance.
 .SH "OPTIONS"
@@ -49,7 +49,7 @@ Can be overridden for individual logs.
 Run in verbose mode (useful for debugging behavior).
 .TP
 .BR \-V ", " \-\-version
-Display metalog version information.
+Display novalog version information.
 .SH "SIGNALS"
 .TP
 .B SIGUSR1
@@ -63,8 +63,8 @@ Disable synchronous mode.
 Note that the exact paths depend on the build settings.  These are the standard paths.
 
 .nf
-.I /etc/metalog.conf
-.I /var/run/metalog.pid
+.I /etc/novalog.conf
+.I /var/run/novalog.pid
 .I /dev/log
 .fi
 .SH "AUTHORS"
@@ -77,4 +77,4 @@ Hendrik Visage <hvisage@users.sourceforge.net>
 Frank DENIS (Jedi/Sector One) <j@pureftpd.org>
 .fi
 .SH "SEE ALSO"
-.BR metalog.conf (5)
+.BR novalog.conf (5)
