--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -50,7 +50,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-sbin_PROGRAMS = metalog$(EXEEXT)
+sbin_PROGRAMS = novalog$(EXEEXT)
 subdir = src
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in \
 	$(top_srcdir)/depcomp
@@ -153,9 +153,9 @@ CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(sbindir)"
 PROGRAMS = $(sbin_PROGRAMS)
-am_metalog_OBJECTS = metalog.$(OBJEXT)
-metalog_OBJECTS = $(am_metalog_OBJECTS)
-metalog_DEPENDENCIES = $(top_builddir)/gnulib/lib/libgnu.a
+am_novalog_OBJECTS = novalog.$(OBJEXT)
+novalog_OBJECTS = $(am_novalog_OBJECTS)
+novalog_DEPENDENCIES = $(top_builddir)/gnulib/lib/libgnu.a
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
 am__v_P_0 = false
@@ -184,8 +184,8 @@ AM_V_CCLD = $(am__v_CCLD_@AM_V@)
 am__v_CCLD_ = $(am__v_CCLD_@AM_DEFAULT_V@)
 am__v_CCLD_0 = @echo "  CCLD    " $@;
 am__v_CCLD_1 = 
-SOURCES = $(metalog_SOURCES)
-DIST_SOURCES = $(metalog_SOURCES)
+SOURCES = $(novalog_SOURCES)
+DIST_SOURCES = $(novalog_SOURCES)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -1284,13 +1284,13 @@ AM_CPPFLAGS = \
 	-DCONFDIR=\"$(sysconfdir)\" \
 	-I$(top_srcdir)/gnulib/lib
 
-metalog_SOURCES = \
+novalog_SOURCES = \
 	helpers.h \
-	metalog.c \
-	metalog.h \
-	metalog_p.h
+	novalog.c \
+	novalog.h \
+	novalog_p.h
 
-metalog_LDADD = $(top_builddir)/gnulib/lib/libgnu.a
+novalog_LDADD = $(top_builddir)/gnulib/lib/libgnu.a
 all: all-am
 
 .SUFFIXES:
@@ -1365,9 +1365,9 @@ uninstall-sbinPROGRAMS:
 
 clean-sbinPROGRAMS:
 	-test -z "$(sbin_PROGRAMS)" || rm -f $(sbin_PROGRAMS)
-metalog$(EXEEXT): $(metalog_OBJECTS) $(metalog_DEPENDENCIES) $(EXTRA_metalog_DEPENDENCIES) 
-	@rm -f metalog$(EXEEXT)
-	$(AM_V_CCLD)$(LINK) $(metalog_OBJECTS) $(metalog_LDADD) $(LIBS)
+novalog$(EXEEXT): $(novalog_OBJECTS) $(novalog_DEPENDENCIES) $(EXTRA_novalog_DEPENDENCIES) 
+	@rm -f novalog$(EXEEXT)
+	$(AM_V_CCLD)$(LINK) $(novalog_OBJECTS) $(novalog_LDADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
@@ -1375,7 +1375,7 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/metalog.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/novalog.Po@am__quote@
 
 .c.o:
 @am__fastdepCC_TRUE@	$(AM_V_CC)$(COMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
