--- a/metalog.conf
+++ b/metalog.conf
@@ -1,17 +1,17 @@
-# Sample Metalog configuration file
+# Sample Novalog configuration file
 
 maxsize  = 1048576  # size in bytes (1048576 = 1 megabyte)
 maxtime  = 86400    # time in seconds (86400 = 1 day)
 maxfiles = 5        # num files per directory
 
-# This will capture all of the internal log messages that metalog itself
+# This will capture all of the internal log messages that novalog itself
 # generates.  If you use any "command" options below, you will want this
-# as metalog generates a lot of status messages whenever it executes a
+# as novalog generates a lot of status messages whenever it executes a
 # command and children processes exit.
-#Metalog :
+#Novalog :
 #
-#  program   = "metalog"
-#  logdir    = "/var/log/metalog"
+#  program   = "novalog"
+#  logdir    = "/var/log/novalog"
 #  break     = 1
 
 # Uncomment and adjust the following lines according to your console logging
