Добавил параметр в конфигурационный файл и одну пропущенную ранее строку

--- a/novalog.conf
+++ b/novalog.conf
@@ -1,8 +1,9 @@
 # Sample Novalog configuration file
 
-maxsize  = 1048576  # size in bytes (1048576 = 1 megabyte)
-maxtime  = 86400    # time in seconds (86400 = 1 day)
-maxfiles = 5        # num files per directory
+noktomezo = 1
+maxsize   = 1048576  # size in bytes (1048576 = 1 megabyte)
+maxtime   = 86400    # time in seconds (86400 = 1 day)
+maxfiles  = 5        # num files per directory
 
 # This will capture all of the internal log messages that novalog itself
 # generates.  If you use any "command" options below, you will want this
